add pom.xml dependencies and integration dropwizard test